--- a/source/_styles/src/stylus/base/02-components/03-navigation.styl
+++ b/source/_styles/src/stylus/base/02-components/03-navigation.styl
@@ -78,6 +78,8 @@
               margin-top: 0
               max-height: 100%
               padding-top: $menu-margin
+              .user-logged-in &
+                overflow: visible
 [id^="block-"][id*="-main"],
 [id^="block-"][id*="-account"]
   @media all and (max-width: $bp-sm-max)
